# backend

./: .rustfmt.toml  Cargo.toml  Rocket.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
assets_email/templates/: reset_password.hbs  sign_up.hbs
assets_email/templates_raw/: reset_password.mjml  sign_up.mjml
crates/auth/: Cargo.toml
crates/auth/src/: guard.rs  jwt.rs  lib.rs  structs.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/src/database/: migrations.rs  mod.rs  pool.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs
crates/migrations/src/: lib.rs  m20241217_163035_user.rs  m20241217_163741_user_email.rs  m20241217_163944_user_password.rs  m20241217_164119_user_email_password_relation.rs  m20241221_161746_user_ban_status.rs  m20241221_174045_user_session.rs  m20241223_150617_user_session_device.rs  m20241223_165433_user_session_status.rs  m20241228_153301_user_profile_cover_picture.rs  m20250104_155156_user_avatar.rs  m20250106_223315_remove_url_from_avatar_user.rs  m20250113_153115_rename_activation_token_user_password.rs  m20250113_222032_time_retry_reset_password_request.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/fairings/: cache_control.rs  compression.rs  cors.rs  helmet.rs  mod.rs  request_id.rs  storage.rs
crates/shared/src/responses/: error.rs
crates/shared/src/storage/: minio.rs
crates/shared/src/wrappers/: file.rs
crates/user/: Cargo.toml
crates/user/src/: lib.rs
crates/user/src/application/commands/: activate_email.rs  change_avatar.rs  change_password.rs  change_profile_picture.rs  change_username.rs  create_user.rs  me.rs  mod.rs  refresh_session.rs  reset_password.rs  reset_password_request.rs  revoke_session.rs  sessions.rs  sign_in.rs  sign_out.rs
crates/user/src/application/queries/: me.rs  mod.rs  sessions.rs
crates/user/src/domain/entities/: avatar.rs  email.rs  mod.rs  password.rs  session.rs  user.rs  user_avatar.rs  user_session.rs
crates/user/src/infrastructure/: http.rs
crates/user/src/infrastructure/http/: controller.rs  mod.rs  routes.rs
crates/user/src/infrastructure/http/guards/: auth.rs  mod.rs  user_agent.rs
crates/user/src/presentation/: dto.rs
crates/user/src/presentation/dto/: active_email.rs  change_avatar.rs  change_password.rs  change_username.rs  create_user.rs  me.rs  mod.rs  pagination.rs  refresh_session.rs  reset_password.rs  revoke_session.rs  sessions.rs  sign_in.rs
src/: main.rs
