[package]
name = "meisaku"
version = "0.1.0"
edition = "2021"
description = "A Rust-based social platform for sharing short posts and engaging in public conversations."
authors = ["sawa-ko <tech@sawako.dev>"]
license-file = "LICENSE"
repository = "https://github.com/meisaku/backend"

[dependencies]
# Local
shared = { path = "crates/shared" }
config = { path = "crates/config" }

rocket = { version = "0.5.1", features = ["serde_json", "secrets", "json"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-time"] }
sea-orm-rocket = { git = "https://github.com/FrTerstappen/sea-orm/", branch = "update-sea-orm-rocket", features = [
    "rocket_okapi",
] }

# okapi
schemars = "0.8.16"
rocket_okapi = { version = "0.9.0", features = ["secrets", "rapidoc", "rocket_db_pools"] }

[workspace]
members = [
    "crates/config",
    "crates/shared",
    "crates/migrations"
]

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "secrets", "json"] }
rocket_okapi = { version = "0.9.0", features = ["secrets", "rapidoc", "rocket_db_pools"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-time"] }
sea-orm-rocket = { git = "https://github.com/FrTerstappen/sea-orm/", branch = "update-sea-orm-rocket", features = [
    "rocket_okapi",
] }
