[package]
name = "meisaku"
version = "0.1.0"
edition = "2021"
description = "A Rust-based social platform for sharing short posts and engaging in public conversations."
authors = ["sawa-ko <tech@sawako.dev>"]
license-file = "LICENSE"
repository = "https://github.com/meisaku/backend"

[dependencies]
# Local
shared = { path = "crates/shared" }
config = { path = "crates/config" }
user = { path = "crates/user" }
auth = { path = "crates/auth" }
email = { path = "crates/email" }

rocket = { version = "0.5.1", features = ["serde_json", "secrets", "json"] }
schemars = { version = "0.8.21", features = ["uuid1", "impl_json_schema", "chrono", "derive_json_schema", "derive"] }
rocket_okapi = { version = "0.9.0", features = ["secrets", "rapidoc", "rocket_db_pools", "uuid"] }
rocket-validation = { git = "https://github.com/sawa-ko/rocket-validation", branch = "feat/support-rocket_okapi-update-deps", features = ["rocket_okapi", "parser_errors"] }
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-chrono", "with-bigdecimal", "with-json"] }
sea-orm-rocket = { version = "0.5.5", features = [
    "rocket_okapi",
] }

[workspace]
members = [
    "crates/config",
    "crates/shared",
    "crates/migrations",
    "crates/user",
    "crates/auth",
    "crates/email"
]

[workspace.dependencies]
minio = { git = "https://github.com/minio/minio-rs", branch = "master" }
rocket = { version = "0.5.1", features = ["serde_json", "secrets", "json"] }
rocket_okapi = { version = "0.9.0", features = ["secrets", "rapidoc", "rocket_db_pools", "uuid"] }
schemars = { version = "0.8.21", features = ["uuid1", "impl_json_schema", "chrono", "derive_json_schema", "derive"] }
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-chrono", "with-bigdecimal", "with-json"] }
sea-orm-rocket = { version = "0.5.5", features = [
    "rocket_okapi",
] }
rocket-validation = { git = "https://github.com/sawa-ko/rocket-validation", branch = "feat/support-rocket_okapi-update-deps", features = ["rocket_okapi", "parser_errors"] }
validator = { version = "0.19.0", features = ["derive", "validator_derive"] }

[workspace.metadata.cargo-udeps]
all-targets = true
all-features = true
