[package]
name = "email"
version = "0.1.0"
edition = "2021"

[dependencies]
resend-rs = "0.11.2"
handlebars = { version = "6.3.1", features = ["dir_source"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rocket = { workspace = true }
rocket_okapi = { workspace = true }