[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.1", features = ["v4"] }
# Workspace
rocket = { workspace = true }
rocket_okapi = { workspace = true }

time = "0.3.37"
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip", "deflate", "zstd"] }
