[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local
config = { path = "../config" }

# Workspace
rocket = { workspace = true }
rocket_okapi = { workspace = true }
sea-orm = { workspace = true }
minio = { workspace = true }

time = "0.3.37"
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip", "deflate", "zstd"] }
uuid = { version = "1.12.0", features = ["v4"] }